<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.MyStoryApp.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/widget_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_see_stories"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <StackView
            android:id="@+id/stack_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:loopViews="true" />

        <TextView
            android:id="@+id/banner_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@color/black"
            android:text="@string/appwidget_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_marginTop="16dp" />
</FrameLayout>
